--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,13 @@ html {
 
 /* body defaults */
 body {
-  font-family: 'Public Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   height: 100vh;
   overflow: auto;
+}
+
+h1 {
+  font-family: "Raleway", sans-serif;
 }
 
 /* global resets */
@@ -30,60 +34,103 @@ button {
 }
 
 /* Page wrapper defaults */
-.page-wrapper {
-  background-color: green;
-  display: flex;
-  flex-flow: column nowrap;
-  height: inherit;
+/* .grid-container {
+  width: 100%;
+  display: grid;
+  color: #444;
+} */
+.container-grid {
+  display: grid;
+  width: 100%;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto 500px;
 }
 
-/*** GRID CONTATINER GLOBAL STYLES ***/
-.grid-container {
-  background-color: black;
-  border: solid 2px black;
-  display: grid;
+.curve-background-grid {
+  background: no-repeat url(images/bg-curve-desktop.svg) left bottom;
+  background-size: contain;
+  grid-column: 1/3;
+  grid-row: 1;
+  height: 120px;
 }
 
 .col-one {
   grid-column: 1/2;
-  border: solid 1px black;
-  background-color: lightpink;
+  grid-row: 2;
 }
+
 .col-two {
-  background-color: blue;
-  border: solid 1px black;
+  grid-column: 2/3;
+  grid-row: 2;
 }
 
-/*** HEADER & FOOTER GLOBAL STYLES ***/
-.header,
-.footer{
-  color: white;
-  background-color: red;
-  grid-column: 1/3;
+[class|="benefit"] {
+  background-color: #f8f8fe;
 }
 
-/****** MEDIA BREAKPOINTS ******/
-/*** MOBILE STYLES ***/
-@media (min-width: 375px) {
-  .grid-container {
-    grid-template-columns: 1fr;
-  }
-  .col-two {
-    grid-column: 1/2;
-  }
+.benefit-left p {}
 
-  .header {
-  }
-
+.benefit-right {
+  text-align: center;
 }
 
-/*** DESKTOP STYLES ***/
-@media (min-width: 1200px) {
-  .grid-container {
-    grid-template-columns: 1fr 1fr;
-  }
-  .col-two {
-    grid-column: 2/3;
-  }
+.benefit-right img {
+  width: 70%;
+}
 
+.companyMotto {
+  margin-left: 40px;
+  margin-bottom: 80px;
+}
+
+.companyKeyPoints {
+  font-size: 0.8em;
+  width: 418px;
+}
+
+
+
+/*** TESTIMONIAL BOX STYLING ***/
+.testimonialBox {
+  background-color: #ffffff;
+  border-radius: 4px;
+  box-shadow: 0px 0px 6px 5px rgba(242, 241, 246, 1);
+  border: solid 1px #ffffff;
+  display: inline-block;
+  font-family: Raleway;
+  font-size: 0.7em;
+  height: 166px;
+  line-height: 20px;
+  margin-left: 40px;
+  padding: 20px;
+  width: 276px;
+}
+
+.pastCustomer {
+  display: grid;
+  grid-template-columns: 34px auto;
+  grid-template-rows: 13px 14px;
+  margin-top: 17px;
+}
+
+.pastCustomer img {
+  align-self: center;
+  border-radius: 64px;
+  grid-column: 1/2;
+  grid-row: 1/3;
+  width: 27px;
+}
+
+.pastCustomer p:nth-child(2) {
+  font-weight: 700;
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+
+.pastCustomer p:nth-child(3) {
+  align-self: center;
+  font-size: 9px;
+  grid-column: 2/3;
+  grid-row: 2/3;
+  padding-top: 3px;
 }
