--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,8 @@
-/**** research order for mobile size starting here https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/CSS_Grid_Layout_and_Accessibility ***/
 /*********** GLOBAL STYLES & DEFAULTS ***********/
 * {
   box-sizing: border-box;
 }
 
-html {
-  font-size: 16px;
-  height: 100vh;
-  overflow: auto;
-}
-
-/* body defaults */
-body {
-  font-family: "Open Sans", sans-serif;
-  height: 100vh;
-  overflow: auto;
-}
-
-h1 {
-  font-family: "Raleway", sans-serif;
-}
-
-/* global resets */
 html,
 body,
 h1,
@@ -33,12 +14,23 @@ button {
   border: none;
 }
 
-/* Page wrapper defaults */
-/* .grid-container {
-  width: 100%;
-  display: grid;
-  color: #444;
-} */
+html {
+  font-size: 16px;
+  height: 100vh;
+  overflow: auto;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+  height: 100vh;
+  overflow: auto;
+}
+
+h1 {
+  font-family: "Raleway", sans-serif;
+}
+
+/********** Middle container styles **********/
 .container-grid {
   display: grid;
   width: 100%;
@@ -46,52 +38,115 @@ button {
   grid-template-rows: auto 500px;
 }
 
+@media (max-width: 375px) {
+  .container-grid {
+    grid-template-columns: 1fr;
+    grid-template-rows: 55px auto;
+  }
+}
+
+/*** Curved top styles ***/
 .curve-background-grid {
   background: no-repeat url(images/bg-curve-desktop.svg) left bottom;
   background-size: contain;
   grid-column: 1/3;
   grid-row: 1;
-  height: 120px;
+  /* height: 114px; */
 }
 
+@media (max-width: 375px) {
+  .curve-background-grid {
+    background: no-repeat url(images/bg-curve-mobile.svg) left bottom;
+    background-size: contain;
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+}
+
+/*** Column styles ***/
 .col-one {
+  align-items: start;
+  display: grid;
   grid-column: 1/2;
   grid-row: 2;
+  grid-template-rows: auto 280px;
+  padding-left: 110px;
+  justify-content: center;
 }
 
-.col-two {
-  grid-column: 2/3;
-  grid-row: 2;
+@media (max-width: 375px) {
+  .col-one {
+    grid-row: 3/4;
+    padding: 0;
+  }
 }
 
 [class|="benefit"] {
   background-color: #f8f8fe;
 }
 
-.benefit-left p {}
-
-.benefit-right {
-  text-align: center;
+/*** Column motto styles / col-one ***/
+@media (max-width: 375px) {
+  .companyMotto {
+    text-align: center;
+  }
 }
 
-.benefit-right img {
-  width: 70%;
+.companyMotto h1 {
+  font-size: 2.2em;
+  margin-bottom: 30px;
 }
 
-.companyMotto {
-  margin-left: 40px;
-  margin-bottom: 80px;
+@media (max-width: 375px) {
+  .companyMotto h1 {
+    font-size: 1.1em;
+  }
 }
 
 .companyKeyPoints {
-  font-size: 0.8em;
-  width: 418px;
+  font-size: 0.9em;
+  text-align: left;
+  width: 462px;
 }
 
+@media (max-width: 375px) {
+  .companyKeyPoints {
+    width: 89%;
+    margin: 0 auto;
+  }
+}
 
+/** Company key points two paragraph tags **/
+@media (max-width: 375px) {
+  .companyKeyP {
+    line-height: 22px;
+    margin-bottom: 20px;
+  }
+}
+
+/** Styles for the 'see how fylo works p and img tag' **/
+.flyoTest {
+  border-bottom: 2px solid #3DA08F;
+  color: #3DA08F;
+  display: inline-grid;
+  grid-template-columns: 132px 25px;
+  text-align: right;
+  margin: 10px 0 0 89px;
+}
+
+.flyoTest p {
+  margin-bottom: 10px;
+}
+
+.flyoTest img {
+  width: 28px;
+  /* padding-top: 3px; */
+  padding: 0px 0 0 6px;
+}
 
 /*** TESTIMONIAL BOX STYLING ***/
 .testimonialBox {
+  align-self: start;
   background-color: #ffffff;
   border-radius: 4px;
   box-shadow: 0px 0px 6px 5px rgba(242, 241, 246, 1);
@@ -99,11 +154,15 @@ button {
   display: inline-block;
   font-family: Raleway;
   font-size: 0.7em;
-  height: 166px;
+  height: 186px;
   line-height: 20px;
-  margin-left: 40px;
+  margin: 50px auto 0;
   padding: 20px;
-  width: 276px;
+  width: 296px;
+}
+
+.Testimonial {
+  width: 98%;
 }
 
 .pastCustomer {
@@ -133,4 +192,35 @@ button {
   grid-column: 2/3;
   grid-row: 2/3;
   padding-top: 3px;
+}
+
+/*** col-two styles ***/
+.col-two {
+  align-items: baseline;
+  display: grid;
+  grid-column: 2/3;
+  grid-row: 2;
+  padding-right: 131px;
+}
+
+@media (max-width: 375px) {
+  .col-two {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    padding-right: 0;
+  }
+}
+
+/** col-tow img styles **/
+.benefit-right img {
+  width: 490px;
+  margin: 0 0 0 124px;
+  padding: 40px 0 83px 0;
+}
+
+@media (max-width: 375px) {
+  .benefit-right img {
+    margin: 0 auto;
+    width: 86%;
+  }
 }
